--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'kr.co.cicd'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.3-SNAPSHOT'
 
 java {
     sourceCompatibility = '17'
@@ -37,4 +37,8 @@ tasks.named('test') {
 
 springBoot {
     buildInfo()
+}
+
+tasks.named('jar'){
+    enabled = false
 }
